2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Change pointer
	arithmetic to conserve alignment invariants.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efiemu/efiemu.h (grub_efiemu_get_memory_map): Remove
	redundant declaration.
	(grub_efiemu_mm_obtain_request): Likewise.
	(grub_efiemu_prepare): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h: Explicitly cast return of grub_bad_type_cast
	to match types.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfsplus.c (grub_hfsplus_btree_recoffset): Handle the
	case of aunaligned recptr.
	(grub_hfsplus_read_block): Declare extoverflow as key to ensure
	alignment.
	(grub_hfsplus_btree_search): Handle unaligned index.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_iterate_dir): Use grub_get_unaligned16
	to get freetag and skip.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_btree_node): Add zero-size keys
	array.
	(grub_nilfs2_btree_node_dkeys): Ensure return pointer alignment.
	(grub_nilfs2_btree_lookup): Ensure buffer alignment.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext4_find_leaf): MAke buf as pointer to
	properly aligned memory.
	(grub_ext2_read_block): Ensure buffer alignment.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/romfs.c (grub_romfs_iterate_dir): Properly align
	name for checksum and fix allocation algorithm.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (grub_properly_aligned_t): New type.
	(GRUB_PROPERLY_ALIGNED_ARRAY): New macro.
	(grub_get_unaligned16): Add explicit casts.
	(grub_get_unaligned32): Likewise.
	(grub_get_unaligned64): Likewise.
	(grub_set_unaligned16): New function.
	(grub_set_unaligned32): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
